--- a/pcgrr/inst/templates/pcgr_quarto_report/documentation.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/documentation.qmd
@@ -80,6 +80,12 @@ for(i in 1:NROW(ref_datasets)){
 
 ### Report content
 
+#### Oncogenicity classification
+
+Somatic aberrations (SNV/InDels) are evaluated for oncogenicity through an implementation of SOP's proposed by VICC/ClinGen [@Horak2022-uh]. Specifically, the following criteria are applied:
+
+For somatic copy number aberrations, we list **all oncogenes subject to amplifications**, as well as**tumor suppressor genes subject to homozygous deletions**.
+
 #### Actionability classificaton
 
 Clinical actionability assessment of SNVs/InDels and gene copy number aberrations found in the tumor sample follows recommendation guidelines by ACMG/AMP [@Li2017-ew]. Specifically, different levels  of actionability are implemented in the following manner:
@@ -87,24 +93,14 @@ Clinical actionability assessment of SNVs/InDels and gene copy number aberration
 - **TIER 1: Variants of strong clinical significance** - constitutes aberrations linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are
 	 - Found within the same tumor type/class as specified by the user, **AND**
 	 - Of strong clinical evidence (i.e. part of guidelines, validated or discovered in late clinical trials ([CIViC evidence levels A/B](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))
-	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact variant level_ or at the _codon/exon level_
 	 
  - **TIER 2: Variants of potential clinical significance** - constitutes other aberrations linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
 	 - Of strong clinical evidence in other tumor types/classes than the one specified by the user, **OR**
 	 - Of weak clinical evidence (early trials, case reports etc. ([CIViC evidence levels C/D/E](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))) in the same tumor type/class as specified by the user
-	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact variant level_ or at the _codon/exon level_
 	 
  - **TIER 3: Variants of uncertain clinical significance** -
    - For SNVs/InDels, this includes other coding variants found in oncogenes or tumor suppressor genes, yet _not_ linked to any known predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers)
    
-<br>
-
-#### Oncogenicity classification
-
-[@Horak2022-uh]
-
-Included in the report is also a complete list of **all oncogenes subject to amplifications**, **tumor suppressor genes subject to homozygous deletions**, and **other drug targets subject to amplifications**
-
 <br>
 
 #### Mutational signatures
@@ -153,6 +149,10 @@ Explanation of key columns in the resulting table of potential kataegis events:
 For PCGR reports that are fueled with CPSR report contents (JSON), we here list the main findings from the CPSR report, i.e. the collection of __Pathogenic/Likely Pathogenic/VUS variants__ (ClinVar and novel CPSR-classified variants). We also show whether any of the query variants are associated with established biomarker evidence items with respect to cancer predisposition, prognosis, therapeutic regimens etc.
 
 <br>
+
+#### Expression
+
+If data is provided, PCGR reports may include a section on gene expression, where we provide a summary of the expression levels of genes that are known to be of clinical relevance in the tumor type in question. The expression levels are based on bulk RNA-seq data from the tumor sample, and are presented as normalized expression values (TPM). We also perform a correlation analysis of the gene expression profile of the input sample with the profiles seen in other reference collections (The Cancer Genome Atlas, DepMap cell lines, TreeHouse pediactric cancers).
 
 #### Clinical trials
 
