--- a/pcgrr/inst/templates/pcgr_quarto_report/mutational_signatures/mutational_spectra.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/mutational_signatures/mutational_spectra.qmd
@@ -2,6 +2,8 @@
 
 #### SBS - mutational contexts
 
+<br>
+
 ```{r raw_context_plot}
 #| output: asis
 #| eval: !expr is.null(msig_content$result$mut_mat) == FALSE
@@ -39,35 +41,52 @@ plotly::ggplotly(
 
 ```
 
+
+```{r missing_context_plot}
+#| output: asis
+#| eval: !expr is.null(msig_content$result$mut_mat) == TRUE
+
+cat("\n::: {.callout-warning}\n## No SNVs\n\nNo SNVs/single base substitutions", 
+    "were found in this sample\n\n:::\n\n")
+
+```
+
+
 #### SBS - type occurrences
 
+<br>
+
 ```{r sbs_type_occurrences}
-#| eval: !expr is.null(msig_content$result$type_occurrences) == FALSE & as.logical(rowSums(msig_content$result$type_occurrences[1:6]) > 0) == TRUE
+#| eval: !expr is.null(msig_content$result$type_occurrences) == FALSE
 #| output: asis
 
 
-plotly::ggplotly(
-  height = 400,
-  MutationalPatterns::plot_spectrum(
-    msig_content$result$type_occurrences, 
-    CT = TRUE,
-    error_bars = 'none',
-    colors = head(
-      pcgrr::color_palette$tier$values, 7))
-)
+if(rowSums(msig_content$result$type_occurrences[1:6]) > 0){
+  plotly::ggplotly(
+    height = 400,
+    MutationalPatterns::plot_spectrum(
+      msig_content$result$type_occurrences, 
+      CT = TRUE,
+      error_bars = 'none',
+      colors = head(
+        pcgrr::color_palette$tier$values, 7))
+  )
+}
 
 ```
 
 ```{r sbs_types_missing}
-#| eval: !expr is.null(msig_content$result$type_occurrences) == FALSE & as.logical(rowSums(msig_content$result$type_occurrences[1:6]) > 0) == FALSE 
+#| eval: !expr (is.null(msig_content$result$type_occurrences) == TRUE) & pcg_report$content$snv_indel$vstats$n_snv == 0
 #| output: asis
 
-cat("\n::: {.callout-note}\n## No SNVs\n\nNo SNVs/single base substitutions", 
+cat("\n::: {.callout-warning}\n## No SNVs\n\nNo SNVs/single base substitutions", 
     "were found in this sample\n\n:::\n\n")
 
 ```
 
 #### ID - mutational contexts
+
+<br>
 
 ```{r indel_contexts}
 #| eval: !expr is.null(msig_content$result$indel_counts) == FALSE
@@ -83,14 +102,13 @@ plotly::ggplotly(
 
 ```
 
-<br><br>
-
 ```{r indel_contexts_missing}
 #| eval: !expr is.null(msig_content$result$indel_counts) == TRUE
 #| output: asis
 
-cat("\n::: {.callout-note}\n## No InDels\n\nNo insertion/deletions",
-"were found in this sample\n\n:::\n\n")
+cat(
+  "\n::: {.callout-warning}\n## No/very few InDels\n\nNo/very few insertion/deletions",
+  "were analyzed in this sample\n\n:::\n")
 
 ```
 
