--- a/pcgrr/vignettes/primary_tumor_sites.Rmd
+++ b/pcgrr/vignettes/primary_tumor_sites.Rmd
@@ -8,10 +8,9 @@ require(DT)
 require(readr)
 ```
 
-PCGR integrates a variety of different datasets, that typically use different notations or ontologies when
-it comes to diseases or phenotypes. We have cross-referenced a variety of ontologies (DiseaseOntology, EFO, OncoTree, UMLS) in use in the oncology domain, and organized all the various tumor subtypes into 30 different main tumor sites (see also https://github.com/sigven/oncoPhenoMap). 
+PCGR integrates a variety of different datasets relating to precision cancer medicine, that often use different ontologies when it comes to diseases or phenotypes. We have cross-referenced a variety of ontologies (DiseaseOntology, EFO, OncoTree, UMLS, ICD-10) that are in use in the oncology domain, and organized all the various tumor subtypes into 30 different main tumor sites (see also https://github.com/sigven/phenOncoX). 
 
-Below you can browse all the various phenotype terms that are associated with each of the primary sites. This as a guide to choose the primary tumor type when running PCGR for a given sample (option `--tumor_site`).
+Below you can browse all the various phenotype terms (including specific tumor subtypes) that are associated with each of the primary sites. This as a guide to choose the primary tumor type when running PCGR for a given sample (option `--tumor_site`).
 
 <br><br>
 
