--- a/pcgrr/vignettes/output.Rmd
+++ b/pcgrr/vignettes/output.Rmd
@@ -5,27 +5,29 @@ output: rmarkdown::html_document
 
 ## Output files
 
-PCGR generates multiple output files, including interactive HTML reports and pure variant annotation files (tab-separated values (TSV)).
+PCGR generates multiple output files, including an interactive HTML reports, an 
+Excel workbook, and pure text-based variant annotation files.
 
-### HTML report - dashboard
+### HTML report - quarto-based
 
-An interactive and tier-structured HTML report (dashboard-like) that shows the most relevant findings in the query cancer genome has the following naming convention:
+An interactive and tier-structured HTML report that shows the most relevant 
+findings in the input cancer genome has the following naming convention:
 
-- `<sample_id>.pcgr_acmg.<genome_assembly>.flexdb.html`
-  - The __sample_id__ is provided as input by the user, and reflects a unique identifier of the tumor-normal sample pair to be analyzed.
+- `<sample_id>.pcgr.<genome_assembly>.html`
+  - The __sample_id__ is provided as input by the user, and reflects a unique 
+  identifier of the tumor-normal sample pair to be analyzed.
 
+The report is structured in various sections, pending upon the input provided
+by the user. The following sections are included in the report:
 
-### HTML report - rmarkdown
-
-An interactive and tier-structured HTML report that shows the most relevant findings in the query cancer genome has the following naming convention:
-
-- `<sample_id>.pcgr_acmg.<genome_assembly>.html`
-  - The __sample_id__ is provided as input by the user, and reflects a unique identifier of the tumor-normal sample pair to be analyzed.
-
-The report is structured in seven main sections, described in more detail below:
-
-  1. __Report and query settings__
-	 * Lists key configurations provided by user
+  1. __Settings__
+	 * Lists key configurations for the analysis, including the genome assembly, type of
+	 sequencing assay (WES/WGS/TARGETED), the cancer type (as provided by the user),
+	 and the tumor purity and ploidy.
+	 
+	2. __Somatic SNVs/InDels__
+	 * Provides an overview of the somatic SNVs and InDels detected in the tumor sample
+	 * Includes a global distribution of allelic support, vis
 
   2. __Main results__
   	 * Nine value boxes that highlight the main properties of the tumor sample:
@@ -75,17 +77,8 @@ The report is structured in seven main sections, described in more detail below:
       * Estimation of relative contribution of [67 known mutational signatures](http://cancer.sanger.ac.uk/cosmic/signatures) in tumor sample (using [MutationalPatterns](https://github.com/raerose01/deconstructSigs) as the underlying framework)
       * Datatable with signatures and proposed underlying etiologies
 
-  7. __Kataegis events__
-      * Detection of potential kataegis events using the algorithm outlined in the [Kataegis Portal](https://github.com/MeichunCai/KataegisPortal)
-
-  8. __Germline findings__
-      * Main findings from CPSR report
-
-  8. __Clinial trials__
-  	 * Interactive table with annotated, molecularly targeted clinical trials from [clinicaltrials.gov](https//clinicaltrials.gov) in the relevant tumor type
-
   9. __Documentation__
-      * Annotation resources - software, databases and tools with version information
+      * Annotation resources - databases with version and licensing information
 	 * Report content
       * References - supporting scientific literature (key report elements)
 
@@ -168,7 +161,7 @@ This file will easen the process of extracting particular parts of the report fo
 
 A VCF file containing annotated, somatic calls (single nucleotide variants and insertion/deletions) is generated with the following naming convention:
 
-- `<sample_id>.pcgr_acmg.<genome_assembly>.vcf.gz`
+- `<sample_id>.pcgr.<genome_assembly>.vcf.gz`
   - The __sample_id__ is provided as input by the user, and reflects a unique identifier of the tumor-normal sample pair to be analyzed. Following common standards, the annotated VCF file is compressed with [bgzip](http://www.htslib.org/doc/bgzip.html) and indexed with [tabix](http://www.htslib.org/doc/tabix.html). Below follows a description of all annotations/tags present in the VCF INFO column after processing with the PCGR annotation pipeline:
 
 ##### _VEP consequence annotations_
@@ -191,7 +184,6 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `IMPACT` | Impact modifier for the consequence type (picked by VEP's `--flag_pick_allele` option) |
 | `VARIANT_CLASS` | Sequence Ontology variant class (picked by VEP's `--flag_pick_allele` option) |
 | `SYMBOL` | Gene symbol (picked by VEP's `--flag_pick_allele` option) |
-| `SYMBOL_ENTREZ` | Official gene symbol as provided by NCBI's Entrez gene |
 | `SYMBOL_SOURCE` | The source of the gene symbol (picked by VEP's `--flag_pick_allele` option) |
 | `STRAND` | The DNA strand (1 or -1) on which the transcript/feature lies (picked by VEP's `--flag_pick_allele` option) |
 | `ENSP` | The Ensembl protein identifier of the affected transcript (picked by VEP's `--flag_pick_allele` option) |
@@ -234,7 +226,7 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 
 | Tag | Description |
 |-----|-------------|
-| `ENTREZ_ID` | [Entrez](http://www.ncbi.nlm.nih.gov/gene) gene identifier |
+| `ENTREZGENE` | [Entrez](http://www.ncbi.nlm.nih.gov/gene) gene identifier |
 | `APPRIS` | Principal isoform flags according to the [APPRIS principal isoform database](http://appris.bioinfo.cnio.es/#/downloads) |
 | `MANE_SELECT` | Indicating if the transcript is the MANE Select or MANE Plus Clinical transcript for the gene (picked by VEP's `--flag_pick_allele_gene` option) |
 | `UNIPROT_ID` | [UniProt](http://www.uniprot.org) identifier |
@@ -242,16 +234,15 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `ENSEMBL_GENE_ID` | Ensembl gene identifier for VEP's picked transcript (*ENSGXXXXXXX*) |
 | `ENSEMBL_TRANSCRIPT_ID` | Ensembl transcript identifier for VEP's picked transcript (*ENSTXXXXXX*) |
 | `ENSEMBL_PROTEIN_ID` | Ensembl corresponding protein identifier for VEP's picked transcript |
-| `REFSEQ_MRNA` | Corresponding RefSeq transcript(s) identifier for VEP's picked transcript (*NM_XXXXX*) |
+| `REFSEQ_TRANSCRIPT_ID` | Corresponding RefSeq transcript(s) identifier for VEP's picked transcript (*NM_XXXXX*) |
 | `TRANSCRIPT_MANE_SELECT` | MANE select transcript identifer: one high-quality representative transcript per protein-coding gene that is well-supported by experimental data and represents the biology of the gene |
 | `TRANSCRIPT_MANE_PLUS_CLINICAL` | transcripts chosen to supplement MANE Select when needed for clinical variant reporting |
 | `GENCODE_TAG` | tag for gencode transcript (basic etc) |
 | `GENCODE_TRANSCRIPT_TYPE` | type of transcript (protein-coding etc.) |
-| `CORUM_ID` | Associated protein complexes (identifiers) from [CORUM](http://mips.helmholtz-muenchen.de/corum/) |
-| `TUMOR_SUPPRESSOR` | Indicates whether gene is predicted as a tumor suppressor gene, from Network of Cancer Genes (NCG) & the CancerMine text-mining resource |
-| `TUMOR_SUPPRESSOR_EVIDENCE` | Underlying evidence for gene being a tumor suppressor. Format: `NCG:<TRUE|FALSE>&CancerMine:<LC|MC|HC>:num_citations` |
-| `ONCOGENE` | Indicates whether gene is predicted as an oncogene, from Network of Cancer Genes (NCG) & the CancerMine text-mining resource |
-| `ONCOGENE_EVIDENCE` | Underlying evidence for gene being an oncogene. Format: `NCG:<TRUE|FALSE>&CancerMine:<LC|MC|HC>:num_citations` |
+| `TSG` | Indicates whether gene is predicted as a tumor suppressor gene, from Cancer Gene Census, Network of Cancer Genes (NCG) & the CancerMine text-mining resource. Format: CGC_TIER<1/2>&NCG&CancerMine:num_citations |
+| `TSG_SUPPORT` | Underlying evidence for gene being a tumor suppressor. Format: `NCG:<TRUE|FALSE>&CancerMine:<LC|MC|HC>:num_citations` |
+| `ONCOGENE` | Indicates whether gene is predicted as an oncogene, from Cancer Gene Census, Network of Cancer Genes (NCG) & the CancerMine text-mining resource. Format: CGC_TIER<1/2>&NCG&CancerMine:num_citations |
+| `ONCOGENE_SUPPORT` | Underlying evidence for gene being an oncogene. Format: `NCG:<TRUE|FALSE>&CancerMine:<LC|MC|HC>:num_citations` |
 | `INTOGEN_DRIVER` | Gene is predicted as a cancer driver in the [IntoGen Cancer Drivers Database](https://www.intogen.org/downloads) |
 | `TCGA_DRIVER` | Gene is predicted as a cancer driver in the [TCGA pan-cancer analysis of cancer driver genes and mutations](https://www.ncbi.nlm.nih.gov/pubmed/29625053) |
 | `PROB_EXAC_LOF_INTOLERANT` | `dbNSFP_gene`: the probability of being loss-of-function intolerant (intolerant of both heterozygous and homozygous lof variants) based on ExAC r0.3 data |
@@ -274,11 +265,9 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `MUTATION_HOTSPOT` | mutation hotspot codon in [cancerhotspots.org](http://cancerhotspots.org/). Format: `gene_symbol | codon | q-value` |
 | `MUTATION_HOTSPOT_TRANSCRIPT` | hotspot-associated transcripts (Ensembl transcript ID) |
 | `MUTATION_HOTSPOT_CANCERTYPE` | hotspot-associated cancer types (from cancerhotspots.org) |
-| `UNIPROT_FEATURE` | Overlapping protein annotations from [UniProt KB](http://www.uniprot.org) |
 | `PFAM_DOMAIN` | Pfam domain identifier (from VEP) |
 | `INTOGEN_DRIVER_MUT` | Indicates if existing variant is predicted as driver mutation from IntoGen Catalog of Driver Mutations |
-| `PUTATIVE_DRIVER_MUTATION` | Variant is predicted as driver mutation in the [TCGA pan-cancer analysis of cancer driver genes and mutations](https://www.ncbi.nlm.nih.gov/pubmed/29625053) |
-| `EFFECT_PREDICTIONS` | All predictions of effect of variant on protein function and pre-mRNA splicing from [database of non-synonymous functional predictions - dbNSFP v4.2](https://sites.google.com/site/jpopgen/dbNSFP). Predicted effects are provided by different sources/algorithms (separated by `&`), `T` = Tolerated, `N` = Neutral, `D` = Damaging: 1.[SIFT](https://sift.bii.a-star.edu.sg/), 2.[MutationTaster](http://www.mutationtaster.org/) (data release Nov 2015), 3.[MutationAssessor](http://mutationassessor.org/) (release 3), 4.[FATHMM](http://fathmm.biocompute.org.uk) (v2.3), 5.[PROVEAN](http://provean.jcvi.org/index.php) (v1.1 Jan 2015), 6.[FATHMM\_MKL](http://fathmm.biocompute.org.uk/fathmmMKL.htm), 7.[PRIMATEAI](https://www.nature.com/articles/s41588-018-0167-z), 8.[DEOGEN2](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5570203/), 9.[DBNSFP\_CONSENSUS\_RNN](https://www.biorxiv.org/content/10.1101/2021.04.09.438706v1) (Ensembl/consensus prediction, based on deep learning), 10.[SPLICE\_SITE\_EFFECT\_ADA](http://nar.oxfordjournals.org/content/42/22/13534) (Ensembl/consensus prediction of splice-altering SNVs, based on adaptive boosting), 11.[SPLICE\_SITE\_EFFECT\_RF](http://nar.oxfordjournals.org/content/42/22/13534) (Ensembl/consensus prediction of splice-altering SNVs, based on random forest), 12.[M-CAP](http://bejerano.stanford.edu/MCAP), 13.[MutPred](http://mutpred.mutdb.org), 14.[GERP](http://mendel.stanford.edu/SidowLab/downloads/gerp/), 15.[BayesDel](https://doi.org/10.1002/humu.23158), 16.[LIST-S2](https://doi.org/10.1093/nar/gkaa288), 17.[ALoFT](https://www.nature.com/articles/s41467-017-00443-5) |
+| `EFFECT_PREDICTIONS` | All predictions of effect of variant on protein function and pre-mRNA splicing from [database of non-synonymous functional predictions - dbNSFP v4.4](https://sites.google.com/site/jpopgen/dbNSFP). Predicted effects are provided by different sources/algorithms (separated by `&`), `T` = Tolerated, `N` = Neutral, `D` = Damaging: 1.[SIFT](https://sift.bii.a-star.edu.sg/), 2.[MutationTaster](http://www.mutationtaster.org/) (data release Nov 2015), 3.[MutationAssessor](http://mutationassessor.org/) (release 3), 4.[FATHMM](http://fathmm.biocompute.org.uk) (v2.3), 5.[PROVEAN](http://provean.jcvi.org/index.php) (v1.1 Jan 2015), 6.[FATHMM\_MKL](http://fathmm.biocompute.org.uk/fathmmMKL.htm), 7.[PRIMATEAI](https://www.nature.com/articles/s41588-018-0167-z), 8.[DEOGEN2](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5570203/), 9.[DBNSFP\_CONSENSUS\_RNN](https://www.biorxiv.org/content/10.1101/2021.04.09.438706v1) (Ensembl/consensus prediction, based on deep learning), 10.[SPLICE\_SITE\_EFFECT\_ADA](http://nar.oxfordjournals.org/content/42/22/13534) (Ensembl/consensus prediction of splice-altering SNVs, based on adaptive boosting), 11.[SPLICE\_SITE\_EFFECT\_RF](http://nar.oxfordjournals.org/content/42/22/13534) (Ensembl/consensus prediction of splice-altering SNVs, based on random forest), 12.[M-CAP](http://bejerano.stanford.edu/MCAP), 13.[MutPred](http://mutpred.mutdb.org), 14.[GERP](http://mendel.stanford.edu/SidowLab/downloads/gerp/), 15.[BayesDel](https://doi.org/10.1002/humu.23158), 16.[LIST-S2](https://doi.org/10.1093/nar/gkaa288), 17.[ALoFT](https://www.nature.com/articles/s41467-017-00443-5) |
 | `DBNSFP_BAYESDEL_ADDAF` | predicted effect from BayesDel (dbNSFP) |
 | `DBNSFP_LIST_S2` | predicted effect from LIST-S2 (dbNSFP) |
 | `DBNSFP_SIFT` | predicted effect from SIFT (dbNSFP) |
@@ -301,27 +290,19 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 
 | Tag | Description |
 |-----|-------------|
-| `AFR_AF_GNOMAD` | African/American germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `AMR_AF_GNOMAD` | American germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `GLOBAL_AF_GNOMAD` | Adjusted global germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `SAS_AF_GNOMAD` | South Asian germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `EAS_AF_GNOMAD` | East Asian germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `FIN_AF_GNOMAD` | Finnish germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `NFE_AF_GNOMAD` | Non-Finnish European germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `OTH_AF_GNOMAD` | Other germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `ASJ_AF_GNOMAD` | Ashkenazi Jewish allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
-| `AFR_AF_1KG` | [1000G Project - phase 3](http://www.1000genomes.org) germline allele frequency for samples from AFR (African) |
-| `AMR_AF_1KG` | [1000G Project - phase 3](http://www.1000genomes.org) germline allele frequency for samples from AMR (Ad Mixed American) |
-| `EAS_AF_1KG` | [1000G Project - phase 3](http://www.1000genomes.org) germline allele frequency for samples from EAS (East Asian) |
-| `EUR_AF_1KG` | [1000G Project - phase 3](http://www.1000genomes.org) germline allele frequency for samples from EUR (European) |
-| `SAS_AF_1KG` | [1000G Project - phase 3](http://www.1000genomes.org) germline allele frequency for samples from SAS (South Asian) |
-| `GLOBAL_AF_1KG` | [1000G Project - phase 3](http://www.1000genomes.org) germline allele frequency for all 1000G project samples (global) |
-| `DBSNPRSID` | [dbSNP](http://www.ncbi.nlm.nih.gov/SNP/) reference ID, as provided by VEP |
+| `gnomADe_AF` | Adjusted global germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_AFR_AF` | African/American germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_AMR_AF` | American germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_SAS_AF` | South Asian germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_EAS_AF` | East Asian germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_FIN_AF` | Finnish germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_NFE_AF` | Non-Finnish European germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_OTH_AF` | Other germline allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `gnomADe_ASJ_AF` | Ashkenazi Jewish allele frequency ([gnomAD release 2](http://gnomad.broadinstitute.org/)) |
+| `DBSNP_RSID` | [dbSNP](http://www.ncbi.nlm.nih.gov/SNP/) reference ID, as provided by VEP |
 | `COSMIC_MUTATION_ID` | Mutation identifier in [Catalog of somatic mutations in cancer](http://cancer.sanger.ac.uk/cancergenome/projects/cosmic/) database, as provided by VEP |
 | `TCGA_PANCANCER_COUNT` | Raw variant count across all TCGA tumor types |
 | `TCGA_FREQUENCY` | Frequency of variant across TCGA tumor types. Format: `tumortype| percent affected|affected cases|total cases` |
-| `ICGC_PCAWG_OCCURRENCE` | Mutation occurrence in [ICGC-PCAWG](http://docs.icgc.org/pcawg/). By project: `project_code|tumor_type|affected_donors|tested_donors|frequency` |
-| `ICGC_PCAWG_AFFECTED_DONORS` (**?**) | Number of donors with the current mutation in [ICGC-PCAWG](http://docs.icgc.org/pcawg/) |
 
 ##### _Clinical associations_
 
@@ -338,10 +319,6 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `CLINVAR_MEDGEN_CUI_SOMATIC` | Associated [MedGen](https://www.ncbi.nlm.nih.gov/medgen/)  concept identifiers (_CUIs_) - somatic state-of-origin |
 | `CLINVAR_VARIANT_ORIGIN` | Origin of variant (somatic, germline, de novo etc.) for variant in [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar) |
 | `CLINVAR_REVIEW_STATUS_STARS` | Rating of the [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar) variant (0-4 stars) with respect to level of review |
-| `DOCM_PMID` | Associated Pubmed IDs for variant in [Database of Curated Mutations](http://docm.genome.wustl.edu) |
-| `OPENTARGETS_DISEASE_ASSOCS` | Associations between protein targets and disease based on multiple lines of evidence (mutations, affected pathways, GWAS, literature etc). Format: `CUI:EFO_ID:IS_DIRECT:OVERALL_SCORE` |
-| `OPENTARGETS_TRACTABILITY_COMPOUND` | Confidence for the existence of a modulator (small molecule) that interacts with the target to elicit a desired biological effect |
-| `OPENTARGETS_TRACTABILITY_ANTIBODY` | Confidence for the existence of a modulator (antibody) that interacts with the target to elicit a desired biological effect |
 
 ##### _Other_
 
@@ -355,7 +332,7 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 
 We provide a tab-separated values file with most important annotations for SNVs/InDels. The file has the following naming convention:
 
-- `<sample_id>.pcgr_acmg.<genome_assembly>.snvs_indels.tiers.tsv`
+- `<sample_id>.pcgr.<genome_assembly>.snvs_indels.tiers.tsv`
 
 The SNVs/InDels are organized into different __tiers__ (as defined above for the HTML report)
 
@@ -431,7 +408,7 @@ The following variables are included in the tiered TSV file (VCF tags issued by 
 
 We provide a tab-separated values file with information about mutational signatures detected in the tumor sample. The file has the following naming convention:
 
-- `<sample_id>.pcgr_acmg.<genome_assembly>.mutational_signatures.tsv`
+- `<sample_id>.pcgr.<genome_assembly>.mutational_signatures.tsv`
 
 The format of the TSV file is the following:
 
@@ -454,7 +431,7 @@ The format of the TSV file is the following:
 
 Copy number segments are intersected with the genomic coordinates of all transcripts from [GENCODE's basic gene annotation](https://www.gencodegenes.org/releases/current.html). In addition, PCGR attaches cancer-relevant annotations for the affected transcripts. The naming convention of the compressed TSV file is as follows:
 
-- `<sample_id>.pcgr_acmg.<genome_assembly>.cna_segments.tsv.gz`
+- `<sample_id>.pcgr.<genome_assembly>.cna_segments.tsv.gz`
   - __NOTE__: This file is organized according to the _affected transcripts_ (i.e. one line/record per affected transcript).
 
 The format of the compressed TSV file is the following:
