--- a/pcgrr/vignettes/variant_classification.Rmd
+++ b/pcgrr/vignettes/variant_classification.Rmd
@@ -19,7 +19,7 @@ output: rmarkdown::html_document
     
 ## Clinical actionability classification
 
-PCGR prioritizes and evaluates variants according to clinical actionability. Currently, PCGR implements its tier classsification framework along the proposed ACMG/AMP guidelines, as detailed below.
+PCGR prioritizes and evaluates variants according to clinical actionability. Currently, PCGR implements its tier classification framework along the proposed ACMG/AMP guidelines, as detailed below.
 
 This tier model attempts to adopt concensus recommendations by ACMG, as outlined in [Li et al., 2017](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5707196/):
 
